--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [flake8]
 extend-ignore = E501, W504, W503
+exclude =
+    scripts/add_station.py
 per-file-ignores =
     __init__.py:F401
-    scripts/add_station.py
