--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     rev: 7.1.1
     hooks:
     - id: flake8
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: 'v2.0.4'
+  - repo: https://github.com/hhatto/autopep8
+    rev: 'v2.3.1'
     hooks:
     - id: autopep8
